<resources>
    <string name="app_name">Könyvwebshop</string>
    <string name="nev">Név</string>
    <string name="jelszo">Jelszó</string>
    <string name="bejelentkezes">Bejelentkezés</string>
    <string name="regiszt">Regisztráció</string>
    <string name="felhasznev">Felhasználónév</string>
    <string name="e_mail">E-mail</string>
    <string name="jelszagain">Jelszó megerősítése</string>
    <string name="megse">Mégse</string>
    <string name="telefonsz">Telefonszám</string>
    <string name="cim">Cím</string>
    <string name="vasarlo">Vásárló</string>
    <string name="elado">Eladó</string>
    <string name="leiras">Leírás:</string>
    <string name="vendeg">Vendég mód</string>
    <string name="logwithGugu">Google fiókkal</string>
    <string name="itemplaceholder">itemplaceholder</string>
    <string name="item_placeholder">itemplaceholder</string>
    <string name="kosar">Kosárba</string>
    <string name="leiras1">Leírás</string>
    <string name="term_k_inf">Termékinfó</string>
    <string name="kijelentkezes">Kijelentkezés</string>
    <string name="beallitasok">Beállítások</string>
    <string name="kosarba">Kosárba</string>
    <string name="kereses">Keresés</string>
    <string name="rendeles">Rendelés</string>
    <string name="t_rl_s">Törlés</string>
    <string name="ar">ár</string>
    <string-array name="phonemode">
<!--        <item>Otthoni</item>-->
        <item>Munkahelyi</item>
        <item>Mobil</item>
<!--        <item>Egyéb</item>-->
    </string-array>

    <string-array name="shoppingitemsname">
        <item>A Narancsfa kolostor</item>
        <item>Evelyn hét férje</item>
        <item>Addie LaRue láthatatlan élete</item>
        <item>Legenda</item>
        <item>Bajnok</item>
        <item>Született tehetség</item>
        <item>Szirmokba zárt szavak</item>
    </string-array>

    <string-array name="shoppingitemleiras">
        <item>Fantasy</item>
        <item>Regény</item>
        <item>Fantasy</item>
        <item>Sci-fi</item>
        <item>Sci-fi</item>
        <item>Sci-fi</item>
        <item>Dráma</item>
    </string-array>


    <array name="shoppingrates">
        <item>4.5</item>
        <item>5</item>
        <item>5</item>
        <item>4.5</item>
        <item>3</item>
        <item>3.5</item>
        <item>4.5</item>
    </array>

    <string-array name="shoppingitemimage">
        <item>@drawable/narancsf</item>
        <item>@drawable/evelyn</item>
        <item>@drawable/addie</item>
        <item>@drawable/legenda</item>
        <item>@drawable/bajnok</item>
        <item>@drawable/szuletetttehetseg</item>
        <item>@drawable/szirm</item>
    </string-array>

    <string-array name="shoppingitemprice">
        <item>8490 Ft</item>
        <item>4499 Ft</item>
        <item>5999 Ft</item>
        <item>2999 Ft</item>
        <item>2999 Ft</item>
        <item>2999 Ft</item>
        <item>5499 Ft</item>
    </string-array>


</resources>