<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edittextuserN"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/nev"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.391"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <EditText
        android:id="@+id/edittextpassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:hint="@string/jelszo"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittextuserN"
        app:layout_constraintVertical_bias="0.148"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <Button
        android:id="@+id/buttonLOG"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bejelentkezes"
        android:onClick="bejelentkezes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittextpassword"
        app:layout_constraintVertical_bias="0.143"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <Button
        android:id="@+id/buttonREG"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/regiszt"
        android:onClick="regiszt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLOG"
        app:layout_constraintVertical_bias="0.143"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>