<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/itemimage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/itemtitle"
            style="ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemimage"
            android:padding="8dp"
            android:text="@string/leiras1"
            android:textColor="?android:textColorSecondary"/>


        <RatingBar
            android:id="@+id/ratingbar"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemtitle"
            android:isIndicator="true"
            android:numStars="5"
            android:padding="8dp"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/subtitle"
            style="ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingbar"
            android:padding="8dp"
            android:text="@string/term_k_inf"/>
        
        
        <TextView
            android:id="@+id/price"
            style="ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subtitle"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:textColor="@color/red"
            android:layout_centerHorizontal="true"/>
        
        <Button
            android:id="@+id/addcart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/price"
            android:text="@string/kosar"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>